--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1309,7 +1309,8 @@ jobs:
 
         python stage2_compiler.py compiler_native.py1 > compiler_native.py
 
-        # 29. Create "Compiler V0" (High-Level to Native IR)
+      # 29. Create "Compiler V0" (High-Level to Native IR)
+        # 29. Create "Compiler V0" (High-Level to Native IR) - Fixed 1-char vars
     - name: 29. Create Compiler V0
       run: |
         cat <<EOF > compiler_v0.py1
@@ -1325,9 +1326,9 @@ jobs:
         @v 読 'read'
         @v 始 'startswith'
         @v 終 'exit'
-        @v 実 'exec'
         @v 整 'int'
         @v 換 'replace'
+        @v 実 'exec'
 
         @v 系 'sys'
         @v 係 'argv'
@@ -1339,17 +1340,15 @@ jobs:
         @v 或 'elif'
 
         @v 空 '" "'
-        @v 括弧 '"("'
-        @v 閉じ '")"'
-        @v 命令 '"p"+"r"+"i"+"n"+"t"'
+        @v 括 '"("'
+        @v 閉 '")"'
+        @v 命 '"p"+"r"+"i"+"n"+"t"'
         @v モ '"r"'
         @v 権 '"u"+"t"+"f"+"8"'
         @v 号 'encoding'
         @v 壱 '"R"+"B"+"X"'
         @v 弐 '"R"+"1"+"2"'
         @v 蓄 '"R"+"A"+"X"'
-        @v 繰 '"R"+"C"+"X"'
-        @v タ '"R"+"D"+"X"'
         
         # Opcodes
         @v 置 '"M"+"O"+"V"'
@@ -1366,52 +1365,52 @@ jobs:
         @v 値 'val'
         @v 函 'lib'
 
-        # Library Strings (Fixed Logic: Input in R12)
-        @v Ｌ１ '"LABEL print_int"'
-        @v Ｌ２ '"PUSH R12"'       # Save input value
-        @v Ｌ３ '"MOV R12 -11"'    # Set arg for GetStdHandle
-        @v Ｌ４ '"CALL GetStdHandle"'
-        @v Ｌ５ '"MOV RBX RAX"'    # RBX = Handle
-        @v Ｌ６ '"POP RAX"'        # RAX = Input value (Restored)
-        @v Ｌ７ '"MOV RCX 10"'     # Divisor
-        @v Ｌ８ '"MOV R12 0"'      # Digit Counter
-        @v Ｌ９ '"PUSH 0"'         # Sentinel? No, just alignment/dummy
-        @v ＬＡ '"LABEL L_DIV"'
-        @v ＬＢ '"DIV RCX"'
-        @v ＬＣ '"ADD RDX 48"'     # To ASCII
-        @v ＬＤ '"PUSH RDX"'
-        @v ＬＥ '"ADD R12 1"'
-        @v ＬＦ '"CMP RAX 0"'
-        @v ＬＧ '"JZ L_PRT"'
-        @v ＬＨ '"JMP L_DIV"'
-        @v ＬＩ '"LABEL L_PRT"'
-        @v ＬＪ '"MOV RCX RBX"'    # Handle
-        @v ＬＫ '"CMP R12 0"'
-        @v ＬＬ '"JZ L_END"'
-        @v ＬＭ '"POP RAX"'
-        @v ＬＮ '"MOV WRITE 500 RAX"'
-        @v ＬＯ '"LEA RDX 500"'
-        @v ＬＰ '"MOV R8 1"'
-        @v ＬＱ '"LEA R9 600"'
-        @v ＬＲ '"SETS 32 0"'
-        @v ＬＳ '"CALL WriteFile"'
-        @v ＬＴ '"ADD R12 -1"'
-        @v ＬＵ '"JMP L_PRT"'
-        @v ＬＶ '"LABEL L_END"'
-        @v ＬＷ '"RET"'
+        # Library Strings (Use 1-char vars A-Z, a-e to comply with Stage2)
+        @v A '"LABEL print_int"'
+        @v B '"PUSH R12"'
+        @v C '"MOV R12 -11"'
+        @v D '"CALL GetStdHandle"'
+        @v E '"MOV RBX RAX"'
+        @v F '"POP RAX"'
+        @v G '"MOV RCX 10"'
+        @v H '"MOV R12 0"'
+        @v I '"PUSH 0"'
+        @v J '"LABEL L_DIV"'
+        @v K '"DIV RCX"'
+        @v L '"ADD RDX 48"'
+        @v M '"PUSH RDX"'
+        @v N '"ADD R12 1"'
+        @v O '"CMP RAX 0"'
+        @v P '"JZ L_PRT"'
+        @v Q '"JMP L_DIV"'
+        @v R '"LABEL L_PRT"'
+        @v S '"MOV RCX RBX"'
+        @v T '"CMP R12 0"'
+        @v U '"JZ L_END"'
+        @v V '"POP RAX"'
+        @v W '"MOV WRITE 500 RAX"'
+        @v X '"LEA RDX 500"'
+        @v Y '"MOV R8 1"'
+        @v Z '"LEA R9 600"'
+        @v a '"SETS 32 0"'
+        @v b '"CALL WriteFile"'
+        @v c '"ADD R12 -1"'
+        @v d '"JMP L_PRT"'
+        @v e '"LABEL L_END"'
+        @v f '"RET"'
 
         $
         実(込)
         
         # Build library
-        函 = Ｌ１ + 改 + Ｌ２ + 改 + Ｌ３ + 改 + Ｌ４ + 改
-        函 = 函 + Ｌ５ + 改 + Ｌ６ + 改 + Ｌ７ + 改 + Ｌ８ + 改
-        函 = 函 + Ｌ９ + 改 + ＬＡ + 改 + ＬＢ + 改 + ＬＣ + 改
-        函 = 函 + ＬＤ + 改 + ＬＥ + 改 + ＬＦ + 改 + ＬＧ + 改
-        函 = 函 + ＬＨ + 改 + ＬＩ + 改 + ＬＪ + 改 + ＬＫ + 改
-        函 = 函 + ＬＬ + 改 + ＬＭ + 改 + ＬＮ + 改 + ＬＯ + 改
-        函 = 函 + ＬＰ + 改 + ＬＱ + 改 + ＬＲ + 改 + ＬＳ + 改
-        函 = 函 + ＬＴ + 改 + ＬＵ + 改 + ＬＶ + 改 + ＬＷ
+        函 = A + 改 + B + 改 + C + 改 + D + 改
+        函 = 函 + E + 改 + F + 改 + G + 改 + H + 改
+        函 = 函 + I + 改 + J + 改 + K + 改 + L + 改
+        函 = 函 + M + 改 + N + 改 + O + 改 + P + 改
+        函 = 函 + Q + 改 + R + 改 + S + 改 + T + 改
+        函 = 函 + U + 改 + V + 改 + W + 改 + X + 改
+        函 = 函 + Y + 改 + Z + 改 + a + 改 + b + 改
+        函 = 函 + c + 改 + d + 改 + e + 改 + f
 
         外 = 系.係
         径 = 外[1]
@@ -1428,11 +1427,44 @@ jobs:
          線 = 線.削()
          
          # Parse: print(123)
-         も 線.始(命令):
-          値 = 線.換(命令, 空).換(括弧, 空).換(閉じ, 空).削()
-          # Pass arg in R12
+         も 線.始(命):
+          値 = 線.換(命, 空).換(括, 空).換(閉, 空).削()
+          # Pass arg in R12 (Wait, actually logic assumes PUSH/POP logic in lib)
+          # Let's verify lib logic again:
+          # B: PUSH R12 (Save caller's R12)
+          # ...
+          # F: POP RAX  (Pop the value we pushed before CALL?? NO!)
+          
+          # Mistake in logic tracing previously!
+          # F is "POP RAX". 
+          # If we assume "print_int" expects arg in a register, we should MOV it.
+          # The Library F line "POP RAX" expects something was PUSHed?
+          # Ah, B "PUSH R12" is pushing the saved R12.
+          # F "POP RAX" is popping... wait.
+          
+          # Let's fix the interface to be simple:
+          # Input: R12
+          # Side effect: Prints number
+          # Registers preserved: RBX, R12?
+          
+          # Let's rewrite Lib slightly to be cleaner:
+          # Entry: R12 has number
+          # 1. PUSH R12 (Save number temporarily? No, save original R12? No)
+          
+          # Let's assume compiler emits:
+          # MOV R12, 123
+          # CALL print_int
+          
+          # Lib Logic:
+          # PUSH R12 (Save input 123 to stack)
+          # MOV R12 -11 -> GetStdHandle -> RBX = Handle
+          # POP RAX (Restore 123 to RAX)
+          # ... proceed to divide RAX ...
+          
+          # YES. This matches the lib strings A-f above.
+          # So compiler must emit "MOV R12, <val>" then "CALL print_int"
+          
           コ.追(置 + 空 + 弐 + 空 + 値) 
-          # Call print_int
           コ.追(呼 + 空 + 字(1))
          
          順 = 順 + 1
@@ -1450,7 +1482,6 @@ jobs:
         表(函)
         EOF
 
-        # Compile Compiler V0
         python stage2_compiler.py compiler_v0.py1 > compiler_v0.py
 
     # 30. Compile and Run High-Level Source
