--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1101,6 +1101,7 @@ jobs:
         # 28. Update Native Compiler (Add 'SETS' opcode for Stack Arguments)
         # 28. Update Native Compiler (Add Math Ops for Calculator)
         # 28. Update Native Compiler (Fix: Syntax Error caused by comment)
+        # 28. Update Native Compiler (Fix: Syntax Error caused by comment)
     - name: 28. Update Native Compiler (Math Support)
       run: |
         cat <<EOF > compiler_native.py1
@@ -1458,6 +1459,7 @@ jobs:
         
         echo "--- Run ---"
         calc.exe
+
 
 
 
